--- a/templates/user-side/product.html
+++ b/templates/user-side/product.html
@@ -128,19 +128,17 @@
 
 
                             <li class="p-b-6">
-                                <label class="container">Price: Low to High
-                                    <input type="checkbox" name="sort_by" value="low_to_high">
-                                    <span class="checkmark"></span>
-                                </label>
+                                <a href="{% url 'user_side:product_page' %}?sort_by=low_to_high" class="filter-link stext-106 trans-04">
+                                    Price: Low to High
+                                </a>
                             </li>
 
                             
 
                             <li class="p-b-6">
-                                <label class="container">Price: High to Low
-                                    <input type="checkbox" name="sort_by" value="high_to_low">
-                                    <span class="checkmark"></span>
-                                </label>
+                                <a href="{% url 'user_side:product_page' %}?sort_by=high_to_low" class="filter-link stext-106 trans-04">
+                                    Price: High to Low
+                                </a>
                             </li>
 
                             <li class="p-b-6">
